custom docker for nextjs

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,15 +6,17 @@ services:
     image: postgres:15
     environment:
       POSTGRES_USER: odoo
-      POSTGRES_PASSWORD: odoo16@2024
+      POSTGRES_PASSWORD: odoo17@2024
       POSTGRES_DB: postgres
     restart: always 
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    networks:
+      - odoo-network
 
-  odoo16:
+  odoo17:
     container_name: web
-    image: odoo:16
+    image: odoo:17
     depends_on:
       - postgres
     ports:
@@ -25,10 +27,10 @@ services:
     environment:
       - HOST=postgres
       - USER=odoo
-      - PASSWORD=odoo16@2024
+      - PASSWORD=odoo17@2024
 
       - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD=odoo16@2024
+      - POSTGRES_PASSWORD=odoo17@2024
       - POSTGRES_DB=postgres
     volumes:
       #- /etc/timezone:/etc/timezone:ro
@@ -37,32 +39,50 @@ services:
       - ./odoo-addons:/mnt/extra-addons
       - ./odoo-config:/etc/odoo
       - ./odoo-data:/var/lib/odoo
-    restart: always             # run as a service
+    restart: always     
+    networks:
+      - odoo-network        # run as a service
     
   frontend:
     build:
-      context: ./frontend
-    container_name: nextapp
+      context: ./next-app
+    container_name: next-app
     working_dir: /app
+    # Set environment variables based on the .env file
+    env_file:
+      - .env
     volumes:
-      - ./frontend:/app
+      - ./next-app/src:/app/src
+      - ./next-app/public:/app/public
+    restart: always
     ports:
       - "3000:3000"
-    command: npm start
+    # command: npm start
+    networks:
+      - odoo-network
 
   nginx:
     image: nginx:latest
     ports:
-      - "8888:80"
+      - "9999:80"
     volumes:
-      - ./dist:/usr/share/nginx/html
+      - staticbuild:/app/public
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       # - react-app
-      - odoo16
+      - odoo17
+    networks:
+      - odoo-network
+
+    
 
 volumes:
   odoo-addons:
   odoo-config:
   odoo-data:
   postgres-data:
+  staticbuild:
+
+networks:
+  odoo-network:
+    driver: bridge
