--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -70,12 +70,13 @@ admin_passwd = minhng.info
 ; ------
 ; -p / --http-port | type = int | Listen port for the main HTTP service
 ; ------
-; http_port = 8069
+http_port = 8069
 
 ; ------
 ; --longpolling-port | type = int | Listen port for the longpolling HTTP service
 ; ------
-; longpolling_port = 8072
+longpolling_port = 
+gevent_port = 8072
 
 ; ------
 ; --no-http | Disable the HTTP and Longpolling services entirely
