--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -63,8 +63,9 @@ services:
 
   nginx:
     image: nginx:latest
+    container_name: odoo-nginx
     ports:
-      - "9999:80"
+      - "80:80"
     volumes:
       - staticbuild:/app/public
       - ./nginx.conf:/etc/nginx/nginx.conf
