--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    container_name: postgres
+    container_name: odoo17-db
     image: postgres:15
     environment:
       POSTGRES_USER: odoo
@@ -15,7 +15,7 @@ services:
       - odoo-network
 
   odoo17:
-    container_name: web
+    container_name: odoo17-web
     image: odoo:17
     depends_on:
       - postgres
@@ -46,7 +46,7 @@ services:
   frontend:
     build:
       context: ./next-app
-    container_name: next-app
+    container_name: odoo17-app
     working_dir: /app
     # Set environment variables based on the .env file
     env_file:
@@ -63,19 +63,17 @@ services:
 
   nginx:
     image: nginx:latest
-    container_name: odoo-nginx
+    container_name: odoo17-proxy
     ports:
       - "80:80"
     volumes:
-      - staticbuild:/app/public
+      # - staticbuild:/app/public
       - ./nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       # - react-app
       - odoo17
     networks:
       - odoo-network
-
-    
 
 volumes:
   odoo-addons:
