--- a/etc/odoo.conf
+++ b/etc/odoo.conf
@@ -57,7 +57,7 @@ addons_path = /mnt/extra-addons
 ; ------
 data_dir = /etc/odoo
 
-admin_passwd = minhng.info
+admin_passwd = Quangtv1992
 
 ; ==============================
 ; | HTTP Service Configuration |
@@ -81,12 +81,12 @@ gevent_port = 8072
 ; ------
 ; --no-http | Disable the HTTP and Longpolling services entirely
 ; ------
-; http_enable = True
+http_enable = True
 
 ; ------
 ; --proxy-mode | Activate reverse proxy WSGI wrappers (headers rewriting) Only enable this when running behind a trusted web proxy!
 ; ------
-; proxy_mode = 
+proxy_mode = True
 
 ; ------
 ; --xmlrpc-interface | SUPPRESSHELP
@@ -96,12 +96,12 @@ gevent_port = 8072
 ; ------
 ; --xmlrpc-port | type = int | SUPPRESSHELP
 ; ------
-; http_port = 
+http_port = 
 
 ; ------
 ; --no-xmlrpc | SUPPRESSHELP
 ; ------
-; http_enable = 
+http_enable = True
 
 ; ===============================
 ; | Web interface Configuration |
@@ -236,12 +236,12 @@ logfile = /etc/odoo/odoo-server.log
 ; ------
 ; -r / --db_user | specify the database user name
 ; ------
-; db_user = 
+db_user = odoo
 
 ; ------
 ; -w / --db_password | specify the database password
 ; ------
-; db_password = 
+db_password = odoo17@2024
 
 ; ------
 ; --pg_path | specify the pg executable path
@@ -251,12 +251,12 @@ logfile = /etc/odoo/odoo-server.log
 ; ------
 ; --db_host | specify the database host
 ; ------
-; db_host = 
+db_host = postgres
 
 ; ------
 ; --db_port | type = int | specify the database port
 ; ------
-; db_port = 
+db_port = 5432
 
 ; ------
 ; --db_sslmode | type = choice | choices = ['disable', 'allow', 'prefer', 'require', 'verify-ca', 'verify-full'] | specify the database ssl connection mode (see PostgreSQL documentation)
