--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ http {
         listen 80;
         server_name 0.0.0.0 localhost;
         # if ($http_x_forwarded_proto != "https") {
-        #     return 301 https://$host$request_uri;
+            #     return 301 https://$host$request_uri;
         # }
 
         access_log /var/log/nginx/localhost.com.access.log;
@@ -27,13 +27,44 @@ http {
         client_max_body_size 5000M;
         proxy_max_temp_file_size 5000M;
 
-        location /portal {
+        location /nextapp {
             proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Cấu hình cho cache
+            proxy_cache_bypass $http_upgrade;
+
+            # Cấu hình cho truy cập các tài nguyên tĩnh
+            proxy_ignore_headers Cache-Control;
+            proxy_ignore_headers Expires;
+            proxy_ignore_headers Set-Cookie;
+            proxy_ignore_headers X-Accel-Expires;
+            proxy_ignore_headers X-Accel-Redirect;
+            proxy_ignore_headers X-Accel-Charset;
+            proxy_ignore_headers X-Accel-Buffering;
+
+            # Đặt alias cho tài nguyên tĩnh
+            # alias /staticbuild;
+
+            # Định nghĩa rewrite để xử lý tài nguyên tĩnh trong webpack dev server
+            # location ~ ^/portal/_next/static/(.*) {
+            #     proxy_pass http://frontend:3000/_next/static/$1;
+            # }
+
+            # # Định nghĩa rewrite cho các route của ứng dụng
+            # location /portal/_next {
+            #     proxy_pass http://frontend:3000;
+            # }
+
+            # # Định nghĩa rewrite cho các route khác của ứng dụng
+            # location /portal {
+            #     proxy_pass http://frontend:3000;
+            # }
         }
+
 
         location / {
             proxy_pass http://web_server;
