--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -53,7 +53,7 @@ services:
       - .env
     volumes:
       # - ./next-app:/app
-      - ./next-app/src:/app/src
+      - ./next-app/app:/app/app
       - ./next-app/public:/app/public
     restart: always
     ports:
