create layout using react bootstrap component

--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,7 @@ http {
         client_max_body_size 5000M;
         proxy_max_temp_file_size 5000M;
 
-        location /nextapp {
+        location / {
             proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -37,37 +37,30 @@ http {
             # Cấu hình cho cache
             proxy_cache_bypass $http_upgrade;
 
-            # Cấu hình cho truy cập các tài nguyên tĩnh
-            proxy_ignore_headers Cache-Control;
-            proxy_ignore_headers Expires;
-            proxy_ignore_headers Set-Cookie;
-            proxy_ignore_headers X-Accel-Expires;
-            proxy_ignore_headers X-Accel-Redirect;
-            proxy_ignore_headers X-Accel-Charset;
-            proxy_ignore_headers X-Accel-Buffering;
-
-            # Đặt alias cho tài nguyên tĩnh
-            # alias /staticbuild;
-
-            # Định nghĩa rewrite để xử lý tài nguyên tĩnh trong webpack dev server
-            # location ~ ^/portal/_next/static/(.*) {
-            #     proxy_pass http://frontend:3000/_next/static/$1;
-            # }
-
-            # # Định nghĩa rewrite cho các route của ứng dụng
-            # location /portal/_next {
-            #     proxy_pass http://frontend:3000;
-            # }
-
-            # # Định nghĩa rewrite cho các route khác của ứng dụng
-            # location /portal {
-            #     proxy_pass http://frontend:3000;
-            # }
+            # we need to remove this 404 handling
+            # because next's _next folder and own handling
+            # try_files $uri $uri/ =404;
         }
 
+        # location ~ /.well-known {
+        #     allow all;
+        # }
 
-        location / {
-            proxy_pass http://web_server;
+        location /_next/static {
+            add_header Cache-Control "public, max-age=3600, immutable";
+            proxy_pass http://frontend:3000/_next/static;
+        }
+
+        
+        location /_next/webpack-hmr {
+            proxy_pass http://frontend:3000/_next/webpack-hmr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        location /web {
+            proxy_pass http://web_server/web;
             proxy_redirect off;
 
             proxy_set_header Host $host;
