--- a/nginx.conf
+++ b/nginx.conf
@@ -27,7 +27,9 @@ http {
         client_max_body_size 5000M;
         proxy_max_temp_file_size 5000M;
 
-        location / {
+
+        # todo defind nginx for next
+        location /nextapp {
             proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -59,8 +61,8 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
-        location /web {
-            proxy_pass http://web_server/web;
+        location / {
+            proxy_pass http://web_server;
             proxy_redirect off;
 
             proxy_set_header Host $host;
