--- a/odoo-config/odoo.conf
+++ b/odoo-config/odoo.conf
@@ -40,7 +40,7 @@
 ; ------
 ; --addons-path | type = string | specify additional addons paths (separated by commas).
 ; ------
-addons_path = /mnt/extra-addons
+addons_path = /mnt/extra-addons,/mnt/extra-addons/3rd-addons/web,/mnt/extra-addons/3rd-addons/odoo-apps
 
 ; ------
 ; --upgrade-path | type = string | specify an additional upgrade path.
@@ -74,17 +74,18 @@ admin_passwd = odoo17@2024Qn
 ; ------
 ; --longpolling-port | type = int | Listen port for the longpolling HTTP service
 ; ------
-; longpolling_port = 8072
+longpolling_port = False
+gevent_port = 8072
 
 ; ------
 ; --no-http | Disable the HTTP and Longpolling services entirely
 ; ------
-; http_enable = True
+http_enable = True
 
 ; ------
 ; --proxy-mode | Activate reverse proxy WSGI wrappers (headers rewriting) Only enable this when running behind a trusted web proxy!
 ; ------
-; proxy_mode = 
+proxy_mode = True
 
 ; ------
 ; --xmlrpc-interface | SUPPRESSHELP
@@ -94,7 +95,7 @@ admin_passwd = odoo17@2024Qn
 ; ------
 ; --xmlrpc-port | type = int | SUPPRESSHELP
 ; ------
-; http_port = 
+http_port = 8069
 
 ; ------
 ; --no-xmlrpc | SUPPRESSHELP
@@ -310,7 +311,7 @@ db_host = postgres
 ; ------
 ; --no-database-list | Disable the ability to obtain or view the list of databases. Also disable access to the database manager and selector, so be sure to set a proper --database parameter first
 ; ------
-; list_db = True
+list_db = True
 
 ; ====================
 ; | Advanced options |
@@ -366,7 +367,7 @@ dev_mode = reload
 ; ------
 ; --workers | type = int | Specify the number of workers, 0 disable prefork mode.
 ; ------
-; workers = 
+workers = 2
 
 ; ------
 ; --limit-memory-soft | type = int | Maximum allowed virtual memory per worker (in bytes), when reached the worker be reset after the current request (default 2048MiB).
