update nginx config

--- a/nginx/config/default.conf
+++ b/nginx/config/default.conf
@@ -6,10 +6,6 @@ upstream odoo18_chat_servers {
     server odoo18-web:8072;
 }
 
-upstream odoo18_frontend {
-    server frontend:3000;
-}
-
 map $http_upgrade $connection_upgrade {
     default upgrade;
     ''      close;
@@ -18,26 +14,8 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 80;
     server_name localhost;
-
-    location / {
-        proxy_pass http://odoo18_frontend/fe; # Tên hoặc địa chỉ IP của container/server Next.js
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # # Serve static files directly from _next/static
-    # location /fe/_next/static {
-    #     alias /usr/share/nginx/html/_next/static; # Nếu bạn muốn mount tệp tĩnh từ Next.js build
-    #     expires 30d;
-    #     access_log off;
-    #     add_header Cache-Control "public, max-age=31536000, immutable";
+    # if ($http_x_forwarded_proto != "https") {
+    #         return 301 https://$host$request_uri;
     # }
 
     access_log /var/log/nginx/localhost.com.access.log;
@@ -48,45 +26,43 @@ server {
     proxy_send_timeout 720s;
     client_max_body_size 60M;
 
-    # location / {
-    #     proxy_pass http://odoo18_server;
-    #     proxy_redirect off;
+    location / {
+        proxy_pass http://odoo18_server;
+        proxy_redirect off;
 
-    #     proxy_set_header X-Forwarded-Host $host;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
 
-    #     proxy_connect_timeout 120s;
-    #     proxy_send_timeout   3600;
-    #     proxy_read_timeout   3600;
-    # }
+        proxy_connect_timeout 120s;
+        proxy_send_timeout   3600;
+        proxy_read_timeout   3600;
+    }
 
-    # # Redirect websocket requests to odoo gevent port
-    # location /websocket {
-    #     proxy_pass http://odoo18_chat_servers;
-    #     proxy_set_header Upgrade $http_upgrade;
+    # Redirect websocket requests to odoo gevent port
+    location /websocket {
+        proxy_pass http://odoo18_chat_servers;
+        proxy_set_header Upgrade $http_upgrade;
 
-    #     proxy_set_header Connection $connection_upgrade;
-    #     proxy_set_header X-Forwarded-Host $host;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    #     proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Real-IP $remote_addr;
 
-    #     ssi off;
-    # }
+        ssi off;
+    }
 
-    # location ~* /web/static/ {
-    #     proxy_cache_valid 200 60m;
-    #     proxy_buffering on;
-    #     expires 864000;
-    #     proxy_pass http://odoo18_server;
-    # }
+    location ~* /web/static/ {
+        proxy_cache_valid 200 60m;
+        proxy_buffering on;
+        expires 864000;
+        proxy_pass http://odoo18_server;
+    }
 
-    # Enable compression for JavaScript and CSS
-    gzip on;
+    # common gzip
     gzip_types text/css text/less text/plain text/xml application/xml application/json application/javascript;
-    gzip_min_length 1000;
-    gzip_proxied any;
-    
+    gzip on;
 }
+ 
